# philadelphia-councilmatic

./: .env.example  .gitignore  Procfile  README.md  docker-compose.yml  pupa_settings.py  pyproject.toml  review_scrapes.py  todo.md
councilmatic/: settings.py  settings_deployment.py  settings_jurisdiction.py  urls.py
philadelphia/: admin.py  models.py  search_indexes.py  urls.py  views.py
philadelphia/management/commands/: clean_db.py  import_geoms.py
philadelphia/static/js/lib/: viewer.js
philadelphia/templates/partials/: committee_person_table.html  council_member_table.html  legislation_text.html
philadelphia/templates/philadelphia/: event.html  legislation.html
philadelphia_scraper/: __init__.py  bills.py  committees.py  events.py  extra_people.json  people.py  utils.py
tests/: test_bills.py  test_committees.py
