[tool.poetry]
name = "phila-councilmatic"
version = "0.0.1"
description = "Philadelphia specific version of the datamade/councilmatic-starter-template"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "phila_councilmatic"}]

[tool.poetry.dependencies]
python = "^3.10"
django-councilmatic = {path="../django-councilmatic", develop=true}
#django-councilmatic = ">=2.5.4"
opencivicdata = {path="../python-opencivicdata", develop=true}
psycopg = {extras = ["binary"], version = "^3.1.9"}
pysolr = "^3.9.0"
pupa = {path="../pupa", develop=true}#"^0.11.0"
django-adv-cache-tag = "==1.1.2"
django-haystack = {extras = ["elasticsearch"], version = "^3.2.1"}
legistar = {path = "../python-legistar-scraper", develop = true} #"^0.0.1"
certifi = "^2023.07.22"
pytz = "==2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
